@@ -1,6 +1,8 @@
 17 September 2018: Wouter
 	- Fix compile on Mac for unbound, provide explicit_bzero when libc
 	  does not have it.
+	- Fix unbound for openssl in FIPS mode, it uses the digests with
+	  the EVP call contexts.
 
 13 September 2018: Wouter
 	- Fix seed for random backup code to use explicit zero when wiped.
